# C-Prototypes

./: .gitignore  CMakeLists.txt  README.md
BasicCL/MinArguments/: CMakeLists.txt  main.c
BasicCL/SubString/: CMakeLists.txt  main.c
BasicCL/Validation/: CMakeLists.txt  main.c
CalcBMI/: CMakeLists.txt  main.c
CalcFraction/: CMakeLists.txt  Fraction.cpp  Fraction.h  main.cpp
CalcFraction/Java_Fraction/src/fraction/: Fraction.java
CountWords/: CMakeLists.txt  main.c
FileHandling/: CMakeLists.txt  main.c
FileHandling/TestSource/Test1/Test2/: Test.txt
KL-Planer/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Exam.cpp  Exam.h  Professor.cpp  Professor.h  README.md  ReadInput.cpp  ReadInput.h  Registration.cpp  Registration.h  Room.cpp  Room.h  Student.cpp  Student.h  Utility.cpp  Utility.h  main.cpp
KL-Planer/input/: Anmeldungen_WS2019_KL.csv  Raumliste.csv
MakefileSetup/: Makefile  Makefile.foo  Makefile.main  Makefile.shared  foo.c  main.c  shared.c
OsHandling/: CMakeLists.txt  main.c  print_bs2000.c  print_linux.c  print_win32.c
TimeManagement/: CMakeLists.txt  TimeClass.cpp  TimeClass.h  main.cpp
Uebung1/: Vorlesung.c
demo1/: Main.c
demoLibrary/: Library1.c
johnnyWorkspace/: Workspace.c
