cmake_minimum_required(VERSION 3.17)
project(../C-Prototypes C)

add_subdirectory(./CalcBMI CalcBMI)
add_subdirectory(./KL-Planer KL-Planer)
add_subdirectory(./CountWords CountWords)
add_subdirectory(./OsHandling OsHandling)
add_subdirectory(./CalcFraction CalcFraction)
add_subdirectory(./TimeManagement TimeManagement)
add_subdirectory(./FileHandling FileHandling)
add_subdirectory(./BasicCL/SubString SubString)
add_subdirectory(./BasicCL/MinArguments MinArguments)
add_subdirectory(./BasicCL/Validation Validation)